--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for perl distribution SVG-Barcode-QRCode
  BREAKING CHANGES
  - Require SVG::Barcode 0.10
  - Change parameters to methods
+ - Rename parameter size to dotsize
 
 0.03 2019-05-24T15:18:49+0200
  - Require SVG::Barcode 0.03 to solve issue with default version 0
