--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for perl distribution SVG-Barcode-QRCode
 
+0.11 Not Released
+ - Upgrade to SVG::Barcode 0.11 with scale parameter
+
 0.10 2019-05-26T06:28:14+0200
  BREAKING CHANGES
  - Require SVG::Barcode 0.10
